@@ -1,6 +1,7 @@
 package com.wallet.controller;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.validation.Valid;
 
@@ -40,7 +41,7 @@ public class UserController {
 		LOGGER.info("Buscando carteiras na base de dados...");
 		Response<List<UserDto>> response = new Response<>();
 		List<User> users = service.findAll();
-		List<UserDto> list = users.stream().map(x -> convertUserToDto(x) ).toList();
+		List<UserDto> list = users.stream().map(x -> convertUserToDto(x) ).collect( Collectors.toList()) ;
 
 		response.setData(list);
 		return ResponseEntity.status(HttpStatus.OK).body(response);
